deploy/sandbox-manager-helm/templates/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: sandbox-manager-envoy-config
data:
  envoy.yaml: |
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address:
          protocol: TCP
          address: 127.0.0.1
          port_value: 9901
    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 7788
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: default
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: sbx_original_dst_cluster
                                timeout: 120s
                    http_filters:
                      - name: envoy.filters.http.ext_proc
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                          grpc_service:
                            envoy_grpc:
                              cluster_name: ext_proc_cluster
                          processing_mode:
                            request_header_mode: SEND
                            response_header_mode: SEND
                          mutation_rules:
                            allow_envoy: true
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    upgrade_configs:
                      - upgrade_type: websocket
      clusters:
        - name: ext_proc_cluster
          type: STATIC
          connect_timeout: 5s
          http2_protocol_options:
            max_concurrent_streams: 1000
          load_assignment:
            cluster_name: ext_proc_cluster
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 9002
        - name: sbx_original_dst_cluster
          type: ORIGINAL_DST
          connect_timeout: 90s
          lb_policy: CLUSTER_PROVIDED
          original_dst_lb_config:
            use_http_header: true
